--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@angular/animations": "^4.0.0",
     "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cli": "^1.2.7",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -27,10 +28,11 @@
     "bootstrap-hover-dropdown": "^2.2.1",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
+    "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14",
-    "@angular/cli": "^1.2.7"
+    "typings": "^2.1.1",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.0.0",
